apps/tanstack-start/src/routes/testing/errors/express-error.tsx
import { createFileRoute } from "@tanstack/react-router";
import { getExpressError } from "../../../server-fns/mutations";

export const Route = createFileRoute("/testing/errors/express-error")({
  loader: getExpressError,
  component: () => <div>This should never render</div>,
});
